--- a/projects/web/app/views/guest/SpaceController/list.html
+++ b/projects/web/app/views/guest/SpaceController/list.html
@@ -15,8 +15,8 @@
 
 <br>
 
-#{crud.table fields: ['executor.name', 'cloudInstanceName', 'cloudInstanceIp',
-            'plugin.name', 'typeName', 'regionName', 'zoneName', 'price', 'creationDate']}
+#{crud.table fields: ['name', 'plugin.name', 'regionName', 'price',
+            'classAPrice', 'classBPrice', 'creationDate']}
 
     #{crud.custom 'executor.name'}
         <a href="@{show(object._key())}">${object.executor.name}</a>
