Label changed for storage price

--- a/projects/web/app/views/guest/SpaceController/list.html
+++ b/projects/web/app/views/guest/SpaceController/list.html
@@ -15,7 +15,7 @@
 
 <br>
 
-#{crud.table fields: ['name', 'plugin.name', 'regionName', 'price',
+#{crud.table fields: ['name', 'plugin.name', 'regionName', 'pricePerGB',
             'classAPrice', 'classBPrice', 'creationDate']}
 
     #{crud.custom 'executor.name'}
