--- a/projects/web/app/views/guest/SpaceController/show.html
+++ b/projects/web/app/views/guest/SpaceController/show.html
@@ -38,7 +38,7 @@
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
-    #{field 'object.price' }
+    #{field 'object.pricePerGB' }
         <div class="form-group row">
             <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
